# server

./: .gitignore  CMakeLists.txt  chatserver.cpp  chatserver.h  fileserver.cpp  fileserver.h  main.cpp
Utils/: logger.cpp  logger.h
cli/: commandinterfaceserver.cpp  commandinterfaceserver.h
fileServer/: fileclienthandler.cpp  fileclienthandler.h  filehandler.cpp  filehandler.h  fileserver.cpp  fileserver.h
messageServer/: chatnetworkmanager.cpp  chatnetworkmanager.h  clienthandler.cpp  clienthandler.h  databasemanager.cpp  databasemanager.h  messageprocessor.cpp  messageprocessor.h
messageServer/Database/: chatmanager.cpp  chatmanager.h  databaseconnector.cpp  databaseconnector.h  filemanager.cpp  filemanager.h  groupmanager.cpp  groupmanager.h  usermanager.cpp  usermanager.h
mserver_cli/: CMakeLists.txt  main.cpp
proto/: editProfile.proto  identifiers.proto  login.proto  register.proto
proto/auth/: login.proto  register.proto
proto/avatars/: avatarsUpdate.proto  getAvatar.proto
proto/chats/: chatMessage.proto  chatsInfo.proto  createDialog.proto  errorSendMessage.proto  loadMessages.proto  markMessage.proto  updatingChats.proto
proto/common/: identifiers.proto
proto/envelope/: envelope.proto
proto/files/: files.proto
proto/group/: addMembers.proto  createGroup.proto  deleteMember.proto
proto/profile/: editProfile.proto
proto/search/: search.proto
